--- a/ShopTree/Views/Shared/_Layout.cshtml
+++ b/ShopTree/Views/Shared/_Layout.cshtml
@@ -41,8 +41,6 @@
     <link href="~/Assets/client/css/smoothproducts.css" type="text/css" rel="stylesheet" />
 
     <script src="~/Assets/client/js/plugin.js" type="text/javascript"></script>
-    <script src="~/Assets/client/js/scripts.js" type="text/javascript"></script>
-
 </head>
 <body>
     <div class="wrapper">
@@ -163,7 +161,7 @@
                                 <div class="cart_header">
                                     <a href="@Url.Action("ViewCart", "ShoppingCart")" title="Giỏ hàng">
                                         <span class="cart_header_icon">
-                                            <img src="~/Assets/client/images/icon/cart.png"/>
+                                            <img src="~/Assets/client/images/icon/cart.png" />
                                         </span>
                                         <span class="box_text">
                                             <strong class="cart_header_count">Giỏ hàng <span id="totalQuantity"></span></strong>
@@ -178,7 +176,7 @@
                                 <div class="user_login">
                                     <div>
                                         <div class="user_login_icon">
-                                            <img src="~/Assets/client/images/icon/user.png"/>
+                                            <img src="~/Assets/client/images/icon/user.png" />
                                         </div>
                                         @if (Session["CustomerName"] == null)
                                         {
@@ -471,7 +469,11 @@
         @* End Footer *@
     </div>
 
+    <script src="~/Assets/client/js/scripts.js" type="text/javascript"></script>
     <script src="~/Assets/client/js/shoppingCart.js" type="text/javascript"></script>
+    <script src="~/Assets/client/js/jquery.unobtrusive-ajax.min.js" type="text/javascript"></script>
+    <script src="~/Assets/client/js/jquery.validate.min.js" type="text/javascript"></script>
+    <script src="~/Assets/client/js/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
     <a href="javascript:void(0);" class="back-to-top"><span>Top</span></a>
 </body>
 </html>
