add fully function about send mail

--- a/ShopTree/Assets/client/css/style.css
+++ b/ShopTree/Assets/client/css/style.css
@@ -4662,7 +4662,9 @@ fieldset {
     }
 
 .user_login {
-    margin-right: 30px;
+    margin-right: 20px;
+    display : flex;
+    width : 120px;
 }
 
     .user_login a:hover, .cart_header a:hover {
@@ -4680,7 +4682,9 @@ fieldset {
         margin-top : 3px;
     }
     .user_login .box_text {
-        margin-top: 10px;
+        margin :auto;
+        width : 80px;
+        word-wrap : break-word;
     }
 
 .box_text {
