--- a/ShopTree/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ShopTree/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
                     </div>
                     <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Thông tin cá nhân</a>
                     <div class="divider"></div>
-                    <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Đổi mật khẩu</a>
-                    <a class="dropdown-item" href="/admin/dang-xuat/"><i class="fa fa-sign-out"></i> Đăng xuất</a>
+                    <a class="dropdown-item" href="@Url.Action("ChangePassword", "Employees", new { area = "Admin", userName = User.Identity.Name })"><i class="fa fa-lock"></i> Đổi mật khẩu</a>
+                    <a class="dropdown-item" href="@Url.Action("Logout", "Employees", new { area = "Admin" })"><i class="fa fa-sign-out"></i> Đăng xuất</a>
                 </div>
             </li>
         </ul>
