add function change admin profile

--- a/ShopTree/Areas/Admin/Views/Products/Detail.cshtml
+++ b/ShopTree/Areas/Admin/Views/Products/Detail.cshtml
@@ -88,7 +88,7 @@
                                         <label class="col-md-3 col-form-label">Avatar :</label>
                                         <div class="col-md-9">
                                             <div class="img-container col-md-9">
-                                                <img src="@Model.Avatar" id="preview" alt="@Model.Name" />
+                                                <img src="@Url.Content(Model.Avatar)" id="preview" alt="@Model.Name" />
                                             </div>
                                         </div>
                                     </div>
