--- a/ShopTree/Views/Products/_ProductItem.cshtml
+++ b/ShopTree/Views/Products/_ProductItem.cshtml
@@ -9,7 +9,7 @@
                 <img class="loading" src="@Url.Content(Model.Avatar)">
             </a>
             <div class="product-actions hidden-xs">
-                <div class="btn-add-to-cart" proid="@Model.ProductId" proname="@Model.ProductName" quantity="1" price="@Model.SellPrice" proimg="@Url.Content(Model.Avatar)">
+                <div class="btn-add-to-cart" proid="@Model.ProductId" proname="@Model.ProductName" quantity="1" price="@Model.SellPrice" proimg="@Model.Avatar">
                     <a href="javascript:void(0);"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a>
                 </div>
                 <div class="btn_quickview">
