--- a/ShopTree/Views/Blogs/Detail.cshtml
+++ b/ShopTree/Views/Blogs/Detail.cshtml
@@ -23,7 +23,7 @@
                             <div class="content_article rte clearfix row">
                                 <div>
                                     <div style="float : left;margin-right : 12px;" class="col-md-6">
-                                        <img style="width:100%" src="@Url.Content("~/" + Model.Avatar)" />
+                                        <img style="width:100%" src="@Url.Content(Model.Avatar)" />
                                     </div>
                                     <p>@Model.Description</p>
                                 </div>
