--- a/ShopTree/Views/Home/Index.cshtml
+++ b/ShopTree/Views/Home/Index.cshtml
@@ -104,7 +104,7 @@
                 <!--End-->
                 <!-- Blog sidebar -->
                 <div class="sidebar_blogs">
-                    <h3 title="bài viết mới" class="sidebar_title">
+                    <h3 title="Bài viết nổi bật" class="sidebar_title">
                         Bài viết nổi bật
                     </h3>
                     @{ Html.RenderAction("_BlogSideBar", "Home");}
