--- a/ShopTree/Views/Shared/_BlogFooter.cshtml
+++ b/ShopTree/Views/Shared/_BlogFooter.cshtml
@@ -7,7 +7,7 @@
         <div class="article_item">
             <div class="article_img">
                 <a href="@Url.Action("Detail", "Blogs", new { id = Slug.GenerateSlug(item.Id, item.Title) })">
-                    <img src="@Url.Content("~/" + item.Avatar)" alt="Nghệ thuật tạo hình cây cảnh" title="Nghệ thuật tạo hình cây cảnh">
+                    <img src="@Url.Content(item.Avatar)" alt="@item.Title" title="@item.Title">
                 </a>
             </div>
             <div class="article_content clearfix">
@@ -19,12 +19,11 @@
                         <i class="fa fa-eye" aria-hidden="true"></i><span>@item.View</span>
                     </div>
                     <div class="article_created">
-                        <i class="fa fa-calendar" aria-hidden="true"></i> <time>@item.DatePost.ToShortDateString()</time>
+                        <i class="fa fa-calendar" aria-hidden="true"></i> <time>@item.DatePost.ToString("dd/MM/yyyy")</time>
                     </div>
                 </div>
                 <div class="des">
-                    @{ var description = item.Description as String;}
-                    <p>@description.Substring(0, 80)</p>
+                    <p>@(item.Description.Substring(0,100) + "...")</p>
                 </div>
                 <a class="readmore" href="@Url.Action("Detail", "Blogs", new { id = Slug.GenerateSlug(item.Id, item.Title) })">Đọc tiếp <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
             </div>
