--- a/ShopTree/Assets/admin/css/style.css
+++ b/ShopTree/Assets/admin/css/style.css
@@ -1,17 +1,3 @@
-/*!
- * GenesisUI - Bootstrap 4 Admin Template
- * @version v1.8.10
- * @link https://genesisui.com
- * Copyright (c) 2017 creativeLabs Łukasz Holeczek
- * @license https://genesisui.com/license.html
- */
-
-/*!
- * Bootstrap v4.0.0-beta.2 (https://getbootstrap.com)
- * Copyright 2011-2017 The Bootstrap Authors
- * Copyright 2011-2017 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
 :root {
     --blue: #36a9e1;
     --indigo: #6610f2;
@@ -13913,9 +13899,19 @@ hr.transparent {
     background: #ff2121;
     border: 1px solid #ff2121;
 }
+    .custom-btn-remove a{
+        color: black;
+    }
+        .custom-btn-remove a:hover {
+            color: #ff2121;
+        }
+        .custom-btn-remove i:hover {
+            color: #ff2121;
+        }
     .custom-btn-remove:hover {
+        cursor : pointer;
         background: white;
-        color: #ff2121;
+        color: #ff2121 !important;
     }
 .custom-btn-success {
     background: #2ecc71;
@@ -13925,6 +13921,12 @@ hr.transparent {
         background: white;
         color: #2ecc71;
     }
+    .custom-btn-success a {
+        color: black;
+    }
+        .custom-btn-success a:hover {
+            color: #2ecc71;
+        }
 .custom-btn-dark {
     color: #fff;
     background: #383e4b;
