--- a/ShopTree/Areas/Admin/Views/Customers/AllCustomer.cshtml
+++ b/ShopTree/Areas/Admin/Views/Customers/AllCustomer.cshtml
@@ -1,5 +1,5 @@
-﻿@using PagedList.Mvc
-@model PagedList.IPagedList<ShopTree.Models.Category>
+﻿@model PagedList.IPagedList<ShopTree.Models.Customer>
+@using PagedList.Mvc
 @{
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
@@ -10,27 +10,23 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item">Home</li>
         <li class="breadcrumb-item">Admin</li>
-        <li class="breadcrumb-item active"><a href="@Url.Action("AllCategory", "Categories", new { area = "Admin" })">@ViewBag.Title</a></li>
+        <li class="breadcrumb-item active"><a href="@Url.Action("AllCustomer", "Custmoers", new { area = "Admin" })">@ViewBag.Title</a></li>
     </ol>
 
     <div class="container-fluid">
         <div class="animated fadeIn">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <a class="custom-btn custom-btn-success" href="@Url.Action("Create", "Categories", new { area = "Admin" })">
-                                <i class="fa fa-plus"></i>
-                                Tạo mới
-                            </a>              
-                        </div>           
+                    <div class="card">                     
                         <div class="card-body">
                             <table class="table table-responsive-sm table-bordered table-striped table-sm">
                                 <thead>
                                     <tr>
-                                        <th>STT</th>
-                                        <th>Avatar</th>
-                                        <th>Tên danh mục</th>
+                                        <th>Id</th>
+                                        <th>Họ và tên</th>
+                                        <th>Email</th>
+                                        <th>Số điện thoại</th>
+                                        <th>Tổng tiền</th>
                                         <th>&nbsp;</th>
                                     </tr>
                                 </thead>
@@ -39,18 +35,14 @@
                                     {
                                         <tr>
                                             <td>@item.Id</td>
-                                            <td class="align-td">
-                                                <img src="@Url.Content(item.Avatar)" class="image-avatar" alt="@item.Name" />
-                                            </td>
                                             <td>@item.Name</td>
+                                            <td>@item.Email</td>
+                                            <td>@item.Phone</td>
+                                            <td>@item.TotalMoney</td>
                                             <td class="td-contain-button">
-                                                <a class="custom-btn custom-btn-warning" href="@Url.Action("Detail", "Categories", new { area = "Admin", id = item.Id, page = Model.PageNumber })">
+                                                <a class="custom-btn custom-btn-warning" href="@Url.Action("Detail", "Customers", new { area = "Admin", id = item.Id, page = Model.PageNumber })">
                                                     <i class="fa fa-check-square-o"></i>
                                                     Chi tiết
-                                                </a>
-                                                <a class="custom-btn custom-btn-info" href="@Url.Action("Edit", "Categories", new { area = "Admin", id = item.Id, page = Model.PageNumber })">
-                                                    <i class="fa fa-edit"></i>
-                                                    Chỉnh sửa
                                                 </a>
                                             </td>
                                         </tr>
@@ -63,7 +55,7 @@
                                         <div>
                                             Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
                                             <span>
-                                                @Html.PagedListPager(Model, page => Url.Action("AllCategory", "Categories", new { page, area = "Admin" }))
+                                                @Html.PagedListPager(Model, page => Url.Action("AllCustomer", "Customers", new { page, area = "Admin" }))
                                             </span>
                                         </div>
                                     </div>
@@ -79,4 +71,5 @@
         <!-- /.conainer-fluid -->
     </div>
 </main>
+
 
